--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: om_console
 description: "A flutter console widget showing in the ui like vscode console"
 version: 0.0.1
-homepage:
+homepage: https://github.com/omar0141/om_console
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
